# Pascal-Compiler

./: syntax.y  txt
back-end/: cgLinux.c  cgLinux.h  x86linux.c
front-end/: CMakeLists.txt  dag.c  dag.h  error.c  error.h  lex.yy.c  main  main.c  makefile  right.pas  symNodeType.h  symtab.c  symtab.h  syntax.tab.c  syntax.tab.h  syntax.y  token.l  tree.c  tree.h  txt  util.c  wrong.pas
src/: .hello.pas.swp  .result.s.swp  CMakeLists.txt  Makefile  cg.c  cg.h  cgmain.c  code_part  dag.c  data_part  error.c  error.h  fronttest.c  hello.pas  lex.yy.c  main.c  pascalCompiler  result  result.s  symNodeType.h  symtab.c  symtab.h  syntax.tab.c  syntax.tab.h  syntax.y  token.l  tree.c  util.c  util.h  wrong.pas
src/test/: case.s  code_part  data_part  enum.pas  function.pas  function.s  hello.pas  nested.pas  pascalCompiler  record.pas  recursive.pas  result.s  test2.pas  test3.pas  test4.pas  test5.pas  total.pas  total3.pas
src/test/right/: test5.pas
